Library/AXL(Library)/C, C++/AXDev.h

DWORD __stdcall AxmSetFirmwareUpdateInfo(long lAxisNo, DWORD dwTotalDataSize, DWORD dwTotalPacketSize);
DWORD __stdcall AxmSetFirmwareDataTrans(long lAxisNo, DWORD dwPacketIndex, DWORD* dwaPacketData);
DWORD __stdcall AxmSetFirmwareUpdate(long lAxisNo, char* szFileName, DWORD dwFileNameLen, DWORD dwPassWord);
DWORD __stdcall AxmSetFoeUploadInfo(long lAxisNo, DWORD dwTotalDataSize, DWORD dwTotalPacketSize);
DWORD __stdcall AxmGetFoeUploadData(long lAxisNo, DWORD dwPacketIndex, DWORD* dwaPacketData);
DWORD __stdcall AxmSetFoeUpload(long lAxisNo, char* szFileName, DWORD dwFileNameLen, DWORD dwPassWord);
//ProfilePosition Mode          = 1,
//Velocity Mode                 = 2,
//ProfileVelocity Mode          = 3,
//ProfileTorque Mode            = 4,
//Homing Mode                   = 6,
//InterpolatedPosition Mode     = 7,
//CyclicSyncPosition Mode       = 8,
//CyclicSyncVelocity Mode       = 9,
//CyclicSyncTorque Mode         = 10,
DWORD __stdcall AxmMotSetOperationMode(long lAxisNo, DWORD dwOperationMode);
DWORD __stdcall AxmMotGetOperationMode(long lAxisNo, DWORD* pdwOperationMode);
// lChannelNo : [0,1] = 0, [2,3] = 2
// nDataCnt :
//  nDataCnt > 0 : Add Data, nDataCnt <= 0 : Initialize Data
// dwOption : Reserved.
// dpPatternData : (X1, Y1)
DWORD  __stdcall AxcTriggerSetPatternData(long lChannelNo, long nDataCnt,  DWORD dwOption, double* dpPatternData);
DWORD  __stdcall AxcTriggerGetPatternData(long lChannelNo, long* npDataCnt,  DWORD* dwpOption, double* dpPatternData);
DWORD __stdcall AxmSpiralMoveEx(long lCoordNo, double dSpiralPitch, double dTurningCount, double dAngleOfPose, DWORD dwIsInnerDirection, double dVelocity, double dAcceleration, double dDeceleration);
DWORD    __stdcall AxmFilletMove(long lCoordinate, double* dPosition, double* dFirstVector, double* dSecondVector, double dMaxVelocity, double dMaxAccel, double dMaxDecel, double dRadius);
DWORD  __stdcall AxmSignalIsServoOnSingleAxis(long lAxisNo, DWORD *upOnOff);
DWORD  __stdcall AxmMotSetTorqueConnection(long lAxisNo, long lSourceAxisNo, DWORD dwEnable);
DWORD  __stdcall AxmMotGetTorqueConnection(long lAxisNo, long* plSourceAxisNo, DWORD* pdwEnable);