Library/AXL(Library)/Delphi/AXDev.pas


function AxmSetFirmwareUpdateInfo(lAxisNo : LongInt; dwTotalDataSize : DWord; dwTotalPacketSize : DWord) : DWord; stdcall;
function AxmSetFirmwareDataTrans(lAxisNo : LongInt; dwPacketIndex : DWord; dwpaPacketData : PDWord) : DWord; stdcall;

function AxmSetFirmwareUpdate(lAxisNo : LongInt; szFileName : PChar; dwFileNameLen : DWord; dwPassWord : DWord) : DWord; stdcall;
    function AxmSetFoeUploadInfo (lAxisNo : LongInt; dwTotalDataSize : DWord; dwTotalPacketSize : DWord) : DWord; stdcall;
    function AxmGetFoeUploadData (lAxisNo : LongInt; dwPacketIndex : DWord; dwaPacketData : PDWord) : DWord; stdcall;
    function AxmSetFoeUpload (lAxisNo : LongInt; szFileName : char*; dwFileNameLen : DWord; dwPassWord : DWord) : DWord; stdcall;


function AxmMotSetOperationMode(lAxisNo : LongInt; dwOperationMode : DWord) : DWord; stdcall;

function AxmMotGetOperationMode(lAxisNo : LongInt; pdwOperationMode : PDWord) : DWord; stdcall;



    function AxcTriggerSetPatternData (lChannelNo : LongInt; nDataCnt : LongInt; dwOption : DWord; dpPatternData : PDouble) : DWord; stdcall;
    function AxcTriggerGetPatternData (lChannelNo : LongInt; npDataCnt : PLongInt; dwpOption : PDWord; dpPatternData : PDouble) : DWord; stdcall;

    function AxmSpiralMoveEx (lCoordNo : LongInt; dSpiralPitch : Double; dTurningCount : Double; dAngleOfPose : Double; dwIsInnerDirection : DWord; dVelocity : Double; dAcceleration : Double; dDeceleration : Double) : DWord; stdcall;
    function AxmFilletMove (lCoordinate : LongInt; dPosition : PDouble; dFirstVector : PDouble; dSecondVector : PDouble; dMaxVelocity : Double; dMaxAccel : Double; dMaxDecel : Double; dRadius : Double) : DWord; stdcall;

    function AxmSignalIsServoOnSingleAxis (lAxisNo : LongInt; upOnOff : PDWord) : DWord; stdcall;

    function AxmMotSetTorqueConnection (lAxisNo : LongInt; lSourceAxisNo : LongInt; dwEnable : DWord) : DWord; stdcall;
    function AxmMotGetTorqueConnection (lAxisNo : LongInt; plSourceAxisNo : PLongInt; pdwEnable : PDWord) : DWord; stdcall;


implementation

const
